--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <div class="social-media">
 			<br><br><br>
                 <ul>
-                    <li>pecata:<a href="https://www.instagram.com/petar_brasnarov/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                    <li>icaka:<a href="https://www.instagram.com/hri100_angeloff/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                    <li>Petar:<a href="https://www.instagram.com/petar_brasnarov/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                    <li>Hristo:<a href="https://www.instagram.com/hri100_angeloff/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
